# services/finance/internal/application/mbspin/create_handler.go
@@ -22,6 +22,7 @@ type CreateCommand struct {
 	CostRateMkt     *float64
 	MBSStatus       *string
 	MBSLdrPrsn      *float64
+	MBSRunLdrPct    *float64
 	MBSFinalProduct *string
 	CreatedBy       string
 }
@@ -42,7 +43,7 @@ func (h *CreateHandler) Handle(ctx context.Context, cmd CreateCommand) (*mbspin.
 		cmd.HeadID, cmd.MgtName, cmd.OracleSysID, nil,
 		cmd.Denier, cmd.Filament, cmd.Dozing, cmd.MBCosting,
 		cmd.CC, cmd.CostRateMkt,
-		cmd.MBSStatus, cmd.MBSLdrPrsn, cmd.MBSFinalProduct,
+		cmd.MBSStatus, cmd.MBSLdrPrsn, cmd.MBSRunLdrPct, cmd.MBSFinalProduct,
 		cmd.CreatedBy,
 	)
 	if err != nil {
